--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,22 @@
 h1 {
     color:red;
 }
+
+.square {
+    background-color: rebeccapurple;
+    width: 26.6%;
+    padding-bottom: 26.6%;
+    margin: 3%;
+    float: left;
+    border-radius: 19%;
+    transition: background-color 0.8s;
+    transition: border-radius 0.8s;
+}
+
+.square.winner {
+    background-color: gold;
+}
+
+.square.loser {
+    background-color: gray;
+}
